# WS2Mongo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
Docker/: WebsocketServer.Dockerfile  app.Dockerfile  docker-compose.yml  websocket_server.py
examples/: fully.rs  mongodb.rs  simple.rs  websocket.rs
src/: config.rs  constants.rs  lib.rs  main.rs  mongodb.rs  utils.rs  websocket.rs
src/config/: mod.rs
tests/: mod.rs
tests/unit/: config_test.rs  websocket_test.rs
