[package]
name = "ws2mongo"
version = "0.1.0"
edition = "2021"

authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Websocket to MongoDB"
license = "GNU GPLv3"

[dependencies]
tokio = "1.37.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
dotenv = "0.15.0"
thiserror = "1.0.60"


[features]
#default = ["use_serde"]
# serder is optional
#use_serde = ["serde", "serde_json"]

[dev-dependencies]
async-std = "1.0"
lazy_static = "1.4.0"


[[example]]
name = "example_simple"
path = "examples/simple.rs"

[[test]]
name = "config_test"
path = "tests/unit/config_test.rs"
