[package]
name = "ws2mongo"
version = "0.1.0"
edition = "2021"

authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Websocket to MongoDB"
license = "GNU GPLv3"

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.30"
dotenv = "0.15.0"
thiserror = "1.0.60"
url = "2.5.0"
http = "1.1.0"
tungstenite = "0.21.0"
serde_json = "1.0.117"
native-tls = "0.2.11"
mongodb = "2.8.2"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.4"
futures-util = "0.3.30"
async-std = "1.12.0"
lazy_static = "1.4.0"

[[example]]
name = "example_simple"
path = "examples/simple.rs"

[[example]]
name = "example_fully"
path = "examples/fully.rs"

[[test]]
name = "config_test"
path = "tests/unit/config_test.rs"

[[test]]
name = "websocket_test"
path = "tests/unit/websocket_test.rs"


[[bin]]
name = "ws2mongo"
path = "src/main.rs"